# palisade-error

./: .gitignore  Architecture.md  BENCH_AVG.md  CHANGELOG  CONTRIBUTING  Cargo.toml  ERROR_GOVERNANCE.md  README  README.md  SECURITY.md  analyze_benchmarks.py  bench_avg.md  benchmark_memory_results.txt
.github/workflows/: ci.yml
benches/: error_performance.rs  memory.rs  performance.rs
benches/support/: mod.rs
benchmark_analysis/: benchmark_data.csv
examples/: README  README.md  async_timing.rs  auth_timing.rs  basic_errors.rs  basic_usage.rs  config_validation.rs  encrypted_logging.rs  forensic_logging.rs  honeypot_pipeline.rs  honeypot_scenario.rs  logging_integration.rs  obfuscation_demo.rs  production_logging.rs  retry_logic.rs  ring_buffer_demo.rs  secure_macros.rs  sensitive_context.rs  timing_normalization.rs
fuzz/: Cargo.toml  README
fuzz/fuzz_targets/: agent_error_display.rs  agent_error_log.rs  agent_error_timing.rs  fuzz_display_formatting.rs  fuzz_error_creation.rs  fuzz_internal_log.rs  fuzz_io_error.rs  fuzz_metadata.rs  metadata.rs  ring_buffer.rs  truncation.rs
scripts/: run_all_tests.sh  run_benchmarks.sh  run_fuzz.sh
src/: codes.rs  context.rs  convenience.rs  crypto.rs  ct.rs  definitions.rs  fixed.rs  lib.rs  log_sink.rs  logging.rs  models.rs  obfuscation.rs  ring_buffer.rs  tests.rs  zeroization.rs
tests/: README  integration_tests.rs  proptest_suite.rs  security_tests.rs  unit_tests.rs
