[package]
name = "palisade-errors"
version = "1.0.1"
edition = "2024"
authors = ["Guilherme F. G. Santos <strukturaenterprise@gmail.com>"]
description = "Security-conscious error handling with operational security principles"
license = "Apache-2.0"
repository = "https://github.com/guivernoir/palisade-errors"
documentation = "https://docs.rs/palisade_errors"
readme = "README.md"
keywords = ["error", "security", "zeroize", "opsec", "forensics"]
categories = ["development-tools::debugging", "cryptography"]

[dependencies]
crypto_bastion = "0.3.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
chrono = "0.4.42"
md5 = "0.8.0"
serde_json = "1.0.149"
proptest = "1.5"
stats_alloc = "0.1.10"

[features]
default = []
# Enable detailed debug formatting for trusted environments only
trusted_debug = []
# Reserved for future external signaling capabilities
external_signaling = []
strict_taxonomy = []
strict_severity = []

# ============================================================================
# EXAMPLES
# ============================================================================



# ============================================================================
# BENCHMARKS
# ============================================================================


# ============================================================================
# TESTS
# ============================================================================


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# ============================================================================
# PROFILE CONFIGURATIONS
# ============================================================================

[profile.bench]
# Optimize for performance during benchmarks
opt-level = 3
lto = true
codegen-units = 1
