[package]
name = "palisade-errors"
version = "2.0.0"
edition = "2024"
authors = ["Guilherme F. G. Santos <strukturaenterprise@gmail.com>"]
description = "Security-conscious error handling with operational security principles"
license = "Apache-2.0"
repository = "https://github.com/guivernoir/palisade-errors"
documentation = "https://docs.rs/palisade_errors"
readme = "README.md"
keywords = ["error", "security", "zeroize", "opsec", "forensics"]
categories = ["development-tools::debugging", "cryptography"]

[dependencies]
crypto_bastion = "0.4.0"

[dev-dependencies]
proptest = "1.5"
stats_alloc = "0.1.10"

[features]
default = []
log = []
trusted_debug = []
strict_severity = []

# ============================================================================
# EXAMPLES
# ============================================================================

[[example]]
name = "encrypted_logging"
required-features = ["log"]


# ============================================================================
# BENCHMARKS
# ============================================================================


# ============================================================================
# TESTS
# ============================================================================


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# ============================================================================
# PROFILE CONFIGURATIONS
# ============================================================================

[profile.bench]
# Optimize for performance during benchmarks
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "memory"
harness = false
