[package]
name = "palisade-errors-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.10"
palisade-errors = { path = "../src/lib.rs" }

[[bin]]
name = "fuzz_error_creation"
path = "fuzz_targets/fuzz_error_creation.rs"
test = false
doc = false

[[bin]]
name = "fuzz_display_formatting"
path = "fuzz_targets/fuzz_display_formatting.rs"
test = false
doc = false

[[bin]]
name = "fuzz_internal_log"
path = "fuzz_targets/fuzz_internal_log.rs"
test = false
doc = false

[[bin]]
name = "fuzz_metadata"
path = "fuzz_targets/fuzz_metadata.rs"
test = false
doc = false

[[bin]]
name = "fuzz_io_error"
path = "fuzz_targets/fuzz_io_error.rs"
test = false
doc = false
